--- a/o_mne.html
+++ b/o_mne.html
@@ -33,7 +33,7 @@
             </button>
             
             <div
-              class="hidden top-navbar w-full lg:inline-flex lg:flex-grow lg:w-auto"
+              class="hidden top-navbar w-full lg:inline-flex lg:flex-grow lg:w-auto bg-mybtn rounded-md"
               id="navigation"
             >
               <div
