--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!--https://github.com/frontendfunn/tailwind-components-navigation-bar/blob/master/css/style.css-->
+<!--https://www.thewebmaster.com/dev/2016/feb/10/how-progressive-jpegs-can-speed-up-your-website/-->
+<!--https://www.jpeg.io-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -36,7 +38,7 @@
             </button>
             
             <div
-              class="hidden top-navbar w-full lg:inline-flex lg:flex-grow lg:w-auto"
+              class="hidden top-navbar w-full lg:inline-flex lg:flex-grow lg:w-auto bg-mybtn rounded-md"
               id="navigation"
             >
               <div
@@ -108,7 +110,7 @@
         <section class="pb-14 mx-10 flex flex-wrap justify-center">
             <div class="flex-none flex flex-wrap m-5 md:mx-12 bg-white rounded-xl w-full sm:w-96 ">
                 <div class="flex-none flex flex-wrap w-full sm:w-1/3 justify-center">
-                    <img class="flex-none object-scale-down m-2 w-20 h-20 sm:m-5 sm:w-28 sm:h-28" src="fotky_web/reviews/lukas.png" alt="">
+                    <img class="flex-none object-scale-down m-2 w-20 h-20 sm:m-5 sm:w-28 sm:h-28" src="fotky_web/reviews/lukas.jpg" alt="">
                 </div>
                 <div class="flex-none w-full sm:w-2/3 text-center">
                     <h1 class="w-full text-xl my-2 sm:my-4">LUKÁŠ</h1>
@@ -118,7 +120,7 @@
 
             <div class="flex-none flex flex-wrap m-5 md:mx-12 bg-white rounded-xl w-full sm:w-96 ">
                 <div class="flex-none flex flex-wrap w-full sm:w-1/3 justify-center">
-                    <img class="flex-none object-scale-down m-2 w-20 h-20 sm:m-5 sm:w-28 sm:h-28" src="fotky_web/reviews/roman_anicka.png" alt="">
+                    <img class="flex-none object-scale-down m-2 w-20 h-20 sm:m-5 sm:w-28 sm:h-28" src="fotky_web/reviews/roman_anicka.jpg" alt="">
                 </div>
                 <div class="flex-none w-full sm:w-2/3 text-center">
                     <h1 class="w-full text-xl my-2 sm:my-4">ROMAN A ANIČKA</h1>
@@ -128,7 +130,7 @@
 
             <div class="flex-none flex flex-wrap m-5 md:mx-12 bg-white rounded-xl w-full sm:w-96 ">
                 <div class="flex-none flex flex-wrap w-full sm:w-1/3 justify-center">
-                    <img class="flex-none object-scale-down m-2 w-20 h-20 sm:m-5 sm:w-28 sm:h-28" src="fotky_web/reviews/anicka.png" alt="">
+                    <img class="flex-none object-scale-down m-2 w-20 h-20 sm:m-5 sm:w-28 sm:h-28" src="fotky_web/reviews/anicka.jpg" alt="">
                 </div>
                 <div class="flex-none w-full sm:w-2/3 text-center">
                     <h1 class="w-full text-xl my-2 sm:my-4">ANIČKA</h1>
@@ -138,7 +140,7 @@
 
             <div class="flex-none flex flex-wrap m-5 md:mx-12 bg-white rounded-xl w-full sm:w-96 ">
                 <div class="flex-none flex flex-wrap w-full sm:w-1/3 justify-center">
-                    <img class="flex-none object-scale-down m-2 w-20 h-20 sm:m-5 sm:w-28 sm:h-28" src="fotky_web/reviews/paty.png" alt="">
+                    <img class="flex-none object-scale-down m-2 w-20 h-20 sm:m-5 sm:w-28 sm:h-28" src="fotky_web/reviews/paty.jpg" alt="">
                 </div>
                 <div class="flex-none w-full sm:w-2/3 text-center">
                     <h1 class="w-full text-xl my-2 sm:my-4">PATI</h1>
