--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             ></script>
             <script src="./script.js"></script>
 
-        <div class="w-full">
+        <div class="w-full pt-20">
             <img class="w-full max-h-120 object-cover" src="fotky_web/site/main/main_photo.png" alt="">
         </div>
         
