--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
     <main class="w-screen">
 
         <button onclick="move_up()" class="move_up_btn">
-            <img src="fotky_web/icons/arrow.png" alt="">
+            <img src="fotky_web/site/icons/arrow.png" alt="">
         </button>
         
       <nav class="flex items-center p-3 flex-wrap bg-mybtn fixed top-0 w-full h-20 z-10">
@@ -56,11 +56,11 @@
         <script src="./script.js"></script>
     
         <!--vyber-->
-        <section class="mt-32 py-4 sticky top-20 bg-mygrey z-0">
+        <section class="mt-12 py-3 sticky top-20 bg-mygrey z-0">
             <div class="flex flex-wrap justify-center">
-                <button onclick="portfolio_part('svadby')" id = "svadby_btn" class="mx-10 text-xl outline-none">SVATBY</button>
-                <button onclick="portfolio_part('portrety')" id = "portrety_btn" class="mx-10 text-xl outline-none">PORTRÉTY</button>
-                <button onclick="portfolio_part('produkty')" id = "produkty_btn" class="mx-10 text-xl outline-none">PRODUKTY</button>
+                <button onclick="portfolio_part('svadby')" id = "svadby_btn" class="mx-10 text-xl outline-none my-2">SVATBY</button>
+                <button onclick="portfolio_part('portrety')" id = "portrety_btn" class="mx-10 text-xl outline-none my-2">PORTRÉTY</button>
+                <button onclick="portfolio_part('produkty')" id = "produkty_btn" class="mx-10 text-xl outline-none my-1">PRODUKTY</button>
             </div>
         </section>
 
