--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>HLAVNÉ</title>
+        <title>HLAVNÍ</title>
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css"
@@ -50,10 +50,10 @@
               <div
                 class="text-black  lg:inline-flex lg:flex-row w-full lg:items-center items-start flex flex-col lg:h-auto justify-center"
               >
-                <a href="index.html" class="menu_item">HLAVNÉ</a>
-                <a href="portfolio.html" class="menu_item">PORTFÓLIO</a>
+                <a href="index.html" class="menu_item">HLAVNÍ</a>
+                <a href="portfolio.html" class="menu_item">PORTFOLIO</a>
                 <a href="index.html" class="font-sans text-5xl py-2 px-10 hidden lg:flex">MP</a>
-                <a href="o_mne.html" class="menu_item">O MNE</a>
+                <a href="o_mne.html" class="menu_item">O MNĚ</a>
                 <a href="kontakt.html" class="menu_item">KONTAKT</a>
                 
               </div>
@@ -97,10 +97,16 @@
         <section class="mb-10 sm:mb-20 mx-5">
             <div class="flex flex-wrap mx-5 sm:mx-32 xl:mx-56 text-center justify-center bg-white rounded-lg">
                 <div class="w-full md:w-1/2 flex flex-wrap content-center justify-center">
-                    <h1 class="w-full pt-5 text-2xl">FOTOGRAFOVANIE</h1>
-                    <p class="mx-10 mt-5 font-sans text-sm text-sm_txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur porttitor dui sed lectus iaculis, eget maximus libero semper. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Curabitur et metus ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur porttitor dui sed lectus iaculis, eget maximus libero semper. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Curabitur et metus ante</p>
-                    <div class="my-5 flex-none w-24 h-9 bg-mybtn rounded-md flex justify-center">
-                        <a href = "o_mne.html" class="mb-auto mt-auto ">O MNE</a>
+                    <h1 class="w-full pt-5 text-2xl">FOTOGRAFOVÁNÍ</h1>
+                    <p class="mx-10 mt-5 font-sans text-base text-sm_txt">
+                        Jmenuji se Terka a vítám vas na mé stránce. Za 5 let fotografování jsem vytvořila tisíce fotografií přírody a lidí. 
+                        Fotím po celém Jihomoravském kraji a to především svatby, portréty a produkty. 
+                        Součástí focení je zaručena příjemná atmosféra. Nejdůležitější je zjistit vaše představy a zrealizovat je. 
+                        Poté zajistit vše potřebné pro nejlepší výsledek fotografií a příjemný zážitek. 
+                        Následně fotografie upravím a pak vám je pošlu. 
+                    </p>
+                    <div class="my-5 flex-none w-32 h-9 bg-mybtn rounded-md flex justify-center">
+                        <a href = "o_mne.html" class="mb-auto mt-auto ">ZOBRAZIT VÍCE</a>
                     </div>
                 </div>
                 
@@ -120,7 +126,7 @@
                 </div>
                 <div class="flex-none w-full sm:w-2/3 text-center">
                     <h1 class="w-full text-xl my-2 sm:my-4">LUKÁŠ</h1>
-                    <p class=" w-full text-sm_txt px-5 pb-5">“Je to skvelé. S fotografiami som veľmi spokojný. Určite odporúčam”</p>
+                    <p class=" w-full text-sm_txt px-5 pb-5">“Je to skvělé. S fotografiemi jsem velmi spokojen. Určitě doporučuji”</p>
                 </div>
             </div>
 
@@ -130,7 +136,7 @@
                 </div>
                 <div class="flex-none w-full sm:w-2/3 text-center">
                     <h1 class="w-full text-xl my-2 sm:my-4">ROMAN A ANIČKA</h1>
-                    <p class=" w-full text-sm_txt px-5 pb-5">“Fotenie prebiehalo s veľkou zábavou a z fotiek sme nadšení”</p>
+                    <p class=" w-full text-sm_txt px-5 pb-5">“Focení probíhalo s velkou zábavou a z fotek jsme nadšeni”</p>
                 </div>
             </div>
 
@@ -140,7 +146,7 @@
                 </div>
                 <div class="flex-none w-full sm:w-2/3 text-center">
                     <h1 class="w-full text-xl my-2 sm:my-4">ANIČKA</h1>
-                    <p class=" w-full text-sm_txt px-5 pb-5">“Najskôr sme fotili spolu produktovky. Nakoniec vznikli skvelé portréty, za ktoré som moc vďačná”</p>
+                    <p class=" w-full text-sm_txt px-5 pb-5">“Nejdříve jsme fotili spolu produktovky. Nakonec vznikly skvělé portréty, za které jsem moc vděčná”</p>
                 </div>
             </div>
 
@@ -150,7 +156,7 @@
                 </div>
                 <div class="flex-none w-full sm:w-2/3 text-center">
                     <h1 class="w-full text-xl my-2 sm:my-4">PATI</h1>
-                    <p class=" w-full text-sm_txt px-5 pb-5">“S Terkou je fotenie vždy prirodzené a zábavné. Dokáže zachytiť tie najlepšie situácie, takže z výsledkov som vždy nadšená!”</p>
+                    <p class=" w-full text-sm_txt px-5 pb-5">“S Terkou je focení vždy přirozené a zábavné. Dokáže zachytit ty nejlepší situace, takže z výsledků jsem vždy nadšená!”</p>
                 </div>
             </div>
 
