--- a/o_mne.html
+++ b/o_mne.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>O MNE</title>
+        <title>O MNĚ</title>
         <link
           rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css"
@@ -44,11 +44,11 @@
               <div
                 class="text-black  lg:inline-flex lg:flex-row w-full lg:items-center items-start flex flex-col lg:h-auto justify-center"
               >
-                <a href="index.html" class="menu_item">HLAVNÉ</a>
-                <a href="portfolio.html" class="menu_item">PORTFÓLIO</a>
-                <a href="index.html" class="font-sans text-5xl py-2 px-10 hidden lg:flex">MP</a>
-                <a href="o_mne.html" class="menu_item">O MNE</a>
-                <a href="kontakt.html" class="menu_item">KONTAKT</a>
+              <a href="index.html" class="menu_item">HLAVNÍ</a>
+              <a href="portfolio.html" class="menu_item">PORTFOLIO</a>
+              <a href="index.html" class="font-sans text-5xl py-2 px-10 hidden lg:flex">MP</a>
+              <a href="o_mne.html" class="menu_item">O MNĚ</a>
+              <a href="kontakt.html" class="menu_item">KONTAKT</a>
                 
               </div>
             </div>
@@ -65,8 +65,14 @@
             <!--O MNE -->
             <div class="flex flex-wrap mx-5 sm:mx-20 xl:mx-44 text-center justify-center bg-white rounded-lg  rounded-b-none overflow-hidden">
                 <div class="w-full md:w-1/2 flex flex-wrap content-center justify-center">
-                    <h1 class="w-full pt-5 text-xl">O MNE</h1>
-                    <p class="mx-10 mt-5 font-sans text-sm text-sm_txt pb-10 md:pb-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur porttitor dui sed lectus iaculis, eget maximus libero semper. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Curabitur et metus ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur porttitor dui sed lectus iaculis, eget maximus libero semper. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Curabitur et metus ante</p>
+                    <h1 class="w-full pt-5 text-xl">O MNĚ</h1>
+                    <p class="mx-10 mt-5 font-sans text-base text-sm_txt pb-10 md:pb-20">
+                        Jsem Terka a vítám Vás na své stránce. Již 5 let se věnuji fotografování. Nejdříve jsem se zaměřovala na fotografování přírody, která mě nikdy nepřestane fascinovat.
+                        Ovšem velice brzy jsem si uvědomila, že mnohem zábavnější a dechberoucí je zachytit úžasné chvíle mezi lidmi.
+                         Čas nejde zastavit, ale ve fotografii ho můžeme uchovat a kdykoliv se k ní vrátit a zavzpomínat.
+                        Lidské příběhy mohou být stejně úchvatné jako zapadající slunce na pláži a nebo výhled na vrcholu hory. Pojďme spolu zachytit váš den a ty úžasné okamžiky v něm.
+                        Věřím že naše spolupráce bude skvělý zážitek.
+                    </p>
                 </div>
 
                 <div class="flex flex-wrap w-full md:w-1/2 content-center">
@@ -77,8 +83,14 @@
             <!-- MOJE SKUSENOSTI -->
             <div class="flex flex-wrap mx-5 sm:mx-20 xl:mx-44 text-center justify-center bg-white">
                 <div class="w-full md:w-1/2 flex flex-wrap order-1 md:order-2 content-center justify-center ">
-                    <h1 class="w-full pt-5 text-xl">MOJE SKÚSENOSTI</h1>
-                    <p class="mx-10 mt-5 font-sans text-sm text-sm_txt pb-10 md:pb-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur porttitor dui sed lectus iaculis, eget maximus libero semper. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Curabitur et metus ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur porttitor dui sed lectus iaculis, eget maximus libero semper. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Curabitur et metus ante</p>
+                    <h1 class="w-full pt-5 text-xl">MOJE ZKUŠENOSTI</h1>
+                    <p class="mx-10 mt-5 font-sans text-base text-sm_txt pb-10 md:pb-20">
+                        Fotím již 5 let. Za tu dobu jsem stihla vyfotit 46 000 fotek portrétů, 12 000 fotek svateb a 4 000 fotek produktů. 
+                        Absolvovala jsem kurz fotografování portrétů a nespočet kurzů na úpravu fotografií. 
+                        V budoucnu bych se chtěla věnovat i dalším zaměřením a rozšířit si zkušenosti ve fotografii. 
+                        Vždy se snažím zachytit lidi podle jejich představ a věřím, že správnou spoluprací lze dosáhnout skvělé výsledky.     
+                    
+                    </p>
                 </div>
 
                 <div class="flex flex-wrap w-full md:w-1/2 order-2 md:order-1 content-center">
@@ -86,28 +98,20 @@
                 </div>
             </div>
 
-            <!--O FOTENI-->
-            <div class="flex flex-wrap mx-5 sm:mx-20 xl:mx-44 text-center justify-center bg-white rounded-lg  rounded-b-none overflow-hidden">
-                <div class="w-full md:w-1/2 flex flex-wrap content-center justify-center">
-                    <h1 class="w-full pt-5 text-xl">O FOTENÍ</h1>
-                    <p class="mx-10 mt-5 font-sans text-sm text-sm_txt pb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur porttitor dui sed lectus iaculis, eget maximus libero semper. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Curabitur et metus ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur porttitor dui sed lectus iaculis, eget maximus libero semper. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Curabitur et metus ante</p>
-                    <div class="my-5 flex-none w-32 h-9 bg-mybtn rounded-md flex justify-center">
-                        <a href = "portfolio.html" class="mb-auto mt-auto ">VIDIEŤ VIAC</a>
-                    </div>
-                </div>
-
-                <div class="flex flex-wrap w-full md:w-1/2 content-center">
-                    <img class="object-cover w-full h-full max-h-96" src="fotky_web/site/o_mne/o_foteni.png">
-                </div>
-            </div>
-
             <!-- MOJE VYBAVENIE -->
             <div class="flex flex-wrap mx-5 sm:mx-20 xl:mx-44 text-center justify-center bg-white rounded-lg  rounded-t-none overflow-hidden">
-                <div class="w-full md:w-1/2 flex flex-wrap order-1 md:order-2 content-center justify-center ">
-                    <h1 class="w-full pt-5 text-xl">MOJE VYBAVENIE</h1>
-                    <p class="mx-10 mt-5 font-sans text-sm text-sm_txt pb-10 md:pb-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur porttitor dui sed lectus iaculis, eget maximus libero semper. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Curabitur et metus ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur porttitor dui sed lectus iaculis, eget maximus libero semper. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Curabitur et metus ante</p>
+                <div class="w-full md:w-1/2 flex flex-wrap order-2 md:order-1 content-center justify-center ">
+                    <h1 class="w-full pt-5 text-xl">MOJE VYBAVENÍ</h1>
+                    <p class="mx-10 mt-5 font-sans text-base text-sm_txt pb-10 md:pb-20">
+                        V mém fotobatohu se skrývá několik úžasných spolupracovníků, bez kterých by to nešlo. 
+                        Důležité jsou samozřejmě bohaté zkušenosti, ale i vybavení se kterým fotograf fotí. Tímto vybavením vám zajišťuji kvalitu fotografií, které se budou vyjímat ve vašem fotoalbu. 
+                        Fotím se Sony Alpha A7R III s objektivem Sigma 24-70 mm f/2,8 DG DN Art. Taky vlastním Nikon D 7100 a objektivy Nikon 50 mm f/1,8 AF-S NIKKOR G nebo Sigma 17-50 mm f/2,8 EX DC OS HSM.
+                        Součastí vybavení jsou taky stativy, průhledné deštníky, fotoodrazky, externí blesk a mnoho dalšího. 
+
+
+                    </p>
                 </div>
-                <div class="flex flex-wrap w-full md:w-1/2 order-2 md:order-1 content-center">
+                <div class="flex flex-wrap w-full md:w-1/2 order-1 md:order-2 content-center">
                     <img class="object-cover w-full h-full max-h-96" src="fotky_web/site/o_mne/vybavenie.png">
                 </div>
             </div>
@@ -116,8 +120,11 @@
         <section class="pb-32 sm:pb-42">
             <div class="flex flex-wrap mx-5 sm:mx-32 xl:mx-64 text-center justify-center bg-white rounded-lg">
                 <div class="w-full md:w-1/2 flex flex-wrap content-center justify-center">
-                    <h1 class="w-full py-5 text-2xl">CHCELI BY STE ODFOTIŤ?</h1>
-                    <p class="mx-10 my-5 font-sans text-sm_txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur porttitor dui sed lectus iaculis, eget maximus libero semper. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Curabitur et metus ante </p>
+                    <h1 class="w-full py-5 text-2xl">CHTĚLI BYSTE VYFOTIT?</h1>
+                    <p class="mx-10 my-5 font-sans text-sm_txt">
+                        Možná by bylo dobré mít skvělou profilovku na sociálních sítích, nebo by jste si chtěl rozšřit své portfolio.
+                        Nebo pokud je právě ten den kdy se rozhodujete jako bude vypadat vaše svatba, neváhejte mě kontaktovat a všechny detaily domyslíme.
+                    </p>
                     <div class="my-5 flex-none w-24 h-9 bg-mybtn rounded-md flex justify-center">
                         <a href = "kontakt.html" class="mb-auto mt-auto ">KONTAKT</a>
                     </div>
