--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>PORTFÓLIO</title>
+    <title>PORTFOLIO</title>
     <link
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css"
@@ -45,11 +45,11 @@
           <div
             class="text-black  lg:inline-flex lg:flex-row w-full lg:items-center items-start flex flex-col lg:h-auto justify-center"
           >
-            <a href="index.html" class="menu_item">HLAVNÉ</a>
-            <a href="portfolio.html" class="menu_item">PORTFÓLIO</a>
-            <a href="index.html" class="font-sans text-5xl py-2 px-10 hidden lg:flex">MP</a>
-            <a href="o_mne.html" class="menu_item">O MNE</a>
-            <a href="kontakt.html" class="menu_item">KONTAKT</a>
+          <a href="index.html" class="menu_item">HLAVNÍ</a>
+          <a href="portfolio.html" class="menu_item">PORTFOLIO</a>
+          <a href="index.html" class="font-sans text-5xl py-2 px-10 hidden lg:flex">MP</a>
+          <a href="o_mne.html" class="menu_item">O MNĚ</a>
+          <a href="kontakt.html" class="menu_item">KONTAKT</a>
             
           </div>
         </div>
@@ -136,7 +136,7 @@
                 <img class="img_w" src="fotky_web/portrety/roman_anicka/5.jpg" alt="">
                 <img class="img_w_h" src="fotky_web/portrety/roman_anicka/6.jpg" alt="">
                 <img class="img_w_h" src="fotky_web/portrety/roman_anicka/7.jpg" alt="">
-                <img class="img_w" src="fotky_web/portrety/roman_anicka/8.jpg" alt="">
+                <img class="img_w_h" src="fotky_web/portrety/roman_anicka/8.jpg" alt="">
                 <img class="img_w" src="fotky_web/portrety/roman_anicka/9.jpg" alt="">
             </div>
         </section>
