--- a/kontakt.html
+++ b/kontakt.html
@@ -44,11 +44,11 @@
       <div
         class="text-black  lg:inline-flex lg:flex-row w-full lg:items-center items-start flex flex-col lg:h-auto justify-center"
       >
-        <a href="index.html" class="menu_item">HLAVNÉ</a>
-        <a href="portfolio.html" class="menu_item">PORTFÓLIO</a>
-        <a href="index.html" class="font-sans text-5xl py-2 px-10 hidden lg:flex">MP</a>
-        <a href="o_mne.html" class="menu_item">O MNE</a>
-        <a href="kontakt.html" class="menu_item">KONTAKT</a>
+      <a href="index.html" class="menu_item">HLAVNÍ</a>
+      <a href="portfolio.html" class="menu_item">PORTFOLIO</a>
+      <a href="index.html" class="font-sans text-5xl py-2 px-10 hidden lg:flex">MP</a>
+      <a href="o_mne.html" class="menu_item">O MNĚ</a>
+      <a href="kontakt.html" class="menu_item">KONTAKT</a>
         
       </div>
     </div>
@@ -65,7 +65,13 @@
         <div class="flex flex-wrap mx-5 sm:mx-32 xl:mx-56 text-center justify-center bg-white rounded-lg">
             <div class="w-full md:w-1/2 flex flex-wrap content-center justify-center">
                 <h1 class="w-full pt-5 text-2xl">KONTAKT</h1>
-                <p class="mx-10 my-5 font-sans text-sm text-sm_txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur porttitor dui sed lectus iaculis, eget maximus libero semper. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Curabitur et metus ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur porttitor dui sed lectus iaculis, eget maximus libero semper. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Curabitur et metus ante</p>
+                <p class="mx-10 my-5 font-sans text-basic text-sm_txt">
+                    Chcete nové fotky, nebo máte nejaké otázky? 
+                    Portréty, svatby, produkty, neváhejte se mi ozvat. Máte konkrétní představu o tom, jak by to mělo vypadat?
+                    Výborně, tak ji můžeme zrealizovat. A když nemáte, vůbec nevadí! Společně se na všem domluvíme.  Napsat mi můžete na Instagram anebo na email. 
+                    Jako potvrzení vám odešlu potvrzovací email toho, na čem jsme se domluvili. Už se těším na naši spolupráci.
+
+                </p>
 
                 <div class="my-2 xl:my-5 mx-3 flex-none w-56 h-9 bg-mybtn rounded-md flex justify-center">
                     <a href = "mailto: mullnyphotos@gmail.com" class="mb-auto mt-auto ">mullnyphotos@gmail.com</a>
@@ -87,11 +93,11 @@
     <section class="pb-10 sm:pb-20">
       <div class="flex flex-wrap mx-5 sm:mx-32 xl:mx-56 text-center justify-center bg-white rounded-lg">
           <div class="w-full md:w-1/2 flex flex-wrap content-center justify-center">
-              <h1 class="w-full pt-5 text-2xl">AKO PREBIEHA FOTENIE</h1>
-              <p class="mx-10 mt-10 font-sans text-sm text-sm_txt">1. Napíšete mi a dohodneme sa na fotení </p>
-              <p class="mx-10 my-2 font-sans text-sm text-sm_txt">2. Ak ide o svadbu, stretneme sa vopred a všetko naplánujeme podľa vašich predstáv.</p>
-              <p class="mx-10 my-2 font-sans text-sm text-sm_txt">3. Portréty a produktovky sa fotia pár hodin. Pri svadbe sa počíta s celodenným fotením aj s večerom. Záleží na dohode.</p>
-              <p class="mx-10 my-2 font-sans text-sm text-sm_txt">4. Následne fotografie upravím a všetky odošlem v plnej kvalite. </p>
+              <h1 class="w-full pt-5 text-2xl">JAK PROBÍHÁ FOCENÍ?</h1>
+              <p class="mx-10 mt-10 font-sans text-basic text-sm_txt">1. Napište mi a dohodneme se na focení </p>
+              <p class="mx-10 my-2 font-sans text-basic text-sm_txt">2. Pokud jde o svatbu, setkáme se předem a vše naplánujeme podle vašich představ.</p>
+              <p class="mx-10 my-2 font-sans text-basic text-sm_txt">3. Portréty a produkty se fotí pár hodin. Při svatbě se počítá s celodenním focením is večerem. Záleží na dohodě.</p>
+              <p class="mx-10 my-2 font-sans text-basic text-sm_txt">4. Následně fotografie upravím a všechny odešlu v plné kvalitě.</p>
 
               <div class="my-2 xl:my-5 mx-3 flex-none w-56 h-9 bg-mybtn rounded-md flex justify-center">
                   <a href = "mailto: mullnyphotos@gmail.com" class="mb-auto mt-auto ">mullnyphotos@gmail.com</a>
@@ -107,46 +113,47 @@
   </section>
 
     <!-- komentare -->
+   <!-- komentare -->
    <section class="pb-14 mx-10 flex flex-wrap justify-center">
-        <div class="flex-none flex flex-wrap m-5 md:mx-12 bg-white rounded-xl w-full sm:w-96 ">
-            <div class="flex-none flex flex-wrap w-full sm:w-1/3 justify-center">
-                <img class="flex-none object-scale-down m-2 w-20 h-20 sm:m-5 sm:w-28 sm:h-28" src="fotky_web/reviews/lukas.jpg" alt="">
-            </div>
-            <div class="flex-none w-full sm:w-2/3 text-center">
-                <h1 class="w-full text-xl my-2 sm:my-4">LUKÁŠ</h1>
-                <p class=" w-full text-sm_txt px-5 pb-5">“Je to skvelé. S fotografiami som veľmi spokojný. Určite odporúčam”</p>
-            </div>
+    <div class="flex-none flex flex-wrap m-5 md:mx-12 bg-white rounded-xl w-full sm:w-96 ">
+        <div class="flex-none flex flex-wrap w-full sm:w-1/3 justify-center">
+            <img class="flex-none object-scale-down m-2 w-20 h-20 sm:m-5 sm:w-28 sm:h-28" src="fotky_web/reviews/lukas.jpg" alt="">
         </div>
+        <div class="flex-none w-full sm:w-2/3 text-center">
+            <h1 class="w-full text-xl my-2 sm:my-4">LUKÁŠ</h1>
+            <p class=" w-full text-sm_txt px-5 pb-5">“Je to skvělé. S fotografiemi jsem velmi spokojen. Určitě doporučuji”</p>
+        </div>
+    </div>
 
-        <div class="flex-none flex flex-wrap m-5 md:mx-12 bg-white rounded-xl w-full sm:w-96 ">
-            <div class="flex-none flex flex-wrap w-full sm:w-1/3 justify-center">
-                <img class="flex-none object-scale-down m-2 w-20 h-20 sm:m-5 sm:w-28 sm:h-28" src="fotky_web/reviews/roman_anicka.jpg" alt="">
-            </div>
-            <div class="flex-none w-full sm:w-2/3 text-center">
-                <h1 class="w-full text-xl my-2 sm:my-4">ROMAN A ANIČKA</h1>
-                <p class=" w-full text-sm_txt px-5 pb-5">“Fotenie prebiehalo s veľkou zábavou a z fotiek sme nadšení”</p>
-            </div>
+    <div class="flex-none flex flex-wrap m-5 md:mx-12 bg-white rounded-xl w-full sm:w-96 ">
+        <div class="flex-none flex flex-wrap w-full sm:w-1/3 justify-center">
+            <img class="flex-none object-scale-down m-2 w-20 h-20 sm:m-5 sm:w-28 sm:h-28" src="fotky_web/reviews/roman_anicka.jpg" alt="">
         </div>
+        <div class="flex-none w-full sm:w-2/3 text-center">
+            <h1 class="w-full text-xl my-2 sm:my-4">ROMAN A ANIČKA</h1>
+            <p class=" w-full text-sm_txt px-5 pb-5">“Focení probíhalo s velkou zábavou a z fotek jsme nadšeni”</p>
+        </div>
+    </div>
 
-        <div class="flex-none flex flex-wrap m-5 md:mx-12 bg-white rounded-xl w-full sm:w-96 ">
-            <div class="flex-none flex flex-wrap w-full sm:w-1/3 justify-center">
-                <img class="flex-none object-scale-down m-2 w-20 h-20 sm:m-5 sm:w-28 sm:h-28" src="fotky_web/reviews/anicka.jpg" alt="">
-            </div>
-            <div class="flex-none w-full sm:w-2/3 text-center">
-                <h1 class="w-full text-xl my-2 sm:my-4">ANIČKA</h1>
-                <p class=" w-full text-sm_txt px-5 pb-5">“Najskôr sme fotili spolu produktovky. Nakoniec vznikli skvelé portréty, za ktoré som moc vďačná”</p>
-            </div>
+    <div class="flex-none flex flex-wrap m-5 md:mx-12 bg-white rounded-xl w-full sm:w-96 ">
+        <div class="flex-none flex flex-wrap w-full sm:w-1/3 justify-center">
+            <img class="flex-none object-scale-down m-2 w-20 h-20 sm:m-5 sm:w-28 sm:h-28" src="fotky_web/reviews/anicka.jpg" alt="">
         </div>
+        <div class="flex-none w-full sm:w-2/3 text-center">
+            <h1 class="w-full text-xl my-2 sm:my-4">ANIČKA</h1>
+            <p class=" w-full text-sm_txt px-5 pb-5">“Nejdříve jsme fotili spolu produktovky. Nakonec vznikly skvělé portréty, za které jsem moc vděčná”</p>
+        </div>
+    </div>
 
-        <div class="flex-none flex flex-wrap m-5 md:mx-12 bg-white rounded-xl w-full sm:w-96 ">
-            <div class="flex-none flex flex-wrap w-full sm:w-1/3 justify-center">
-                <img class="flex-none object-scale-down m-2 w-20 h-20 sm:m-5 sm:w-28 sm:h-28" src="fotky_web/reviews/paty.jpg" alt="">
-            </div>
-            <div class="flex-none w-full sm:w-2/3 text-center">
-                <h1 class="w-full text-xl my-2 sm:my-4">PATI</h1>
-                <p class=" w-full text-sm_txt px-5 pb-5">“S Terkou je fotenie vždy prirodzené a zábavné. Dokáže zachytiť tie najlepšie situácie, takže z výsledkov som vždy nadšená!”</p>
-            </div>
+    <div class="flex-none flex flex-wrap m-5 md:mx-12 bg-white rounded-xl w-full sm:w-96 ">
+        <div class="flex-none flex flex-wrap w-full sm:w-1/3 justify-center">
+            <img class="flex-none object-scale-down m-2 w-20 h-20 sm:m-5 sm:w-28 sm:h-28" src="fotky_web/reviews/paty.jpg" alt="">
         </div>
+        <div class="flex-none w-full sm:w-2/3 text-center">
+            <h1 class="w-full text-xl my-2 sm:my-4">PATI</h1>
+            <p class=" w-full text-sm_txt px-5 pb-5">“S Terkou je focení vždy přirozené a zábavné. Dokáže zachytit ty nejlepší situace, takže z výsledků jsem vždy nadšená!”</p>
+        </div>
+    </div>
 
     </section>
 
@@ -158,7 +165,12 @@
         <div class="flex flex-wrap mx-5 sm:mx-32 xl:mx-56 text-center justify-center bg-white rounded-lg">
             <div class="w-full md:w-1/2 flex flex-wrap content-center justify-center">
                 <h1 class="w-full pt-5 text-2xl">INSTAGRAM</h1>
-                <p class="mx-10 mt-10 font-sans text-sm text-sm_txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur porttitor dui sed lectus iaculis, eget maximus libero semper. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Curabitur et metus ante. </p>
+                <p class="mx-10 mt-10 font-sans text-basic text-sm_txt">
+                    Neváhejte se podívat i na můj Instagram.
+                    Pavidelne na něj přidávám nové příspěvky a novinky. 
+                    Najdete tam i moje fotografie, které na stránce nejsou. 
+                    Například fotografie přírody nebo zvířat. Pokud by vás něco zaujalo, můžete mě přes něj kontaktovat.
+                 </p>
                 
                 <div class="my-2 xl:my-5 mx-3 flex-none w-40 h-9 bg-mybtn rounded-md flex justify-center">
                     <a href = "https://www.instagram.com/mullny_photos/?hl=cs" class="mb-auto mt-auto ">@mullny_photos</a>
