--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cz">
   <head>
+
+    <meta name="title" content="Mullny photos" />
+    <meta name="description" content="Focení svateb, portrétu a párových fotek" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="profile" />
+    <meta property="og:url" content="https://asdsasm9.github.io/mp_page/#/home" />
+    <meta property="og:title" content="Mullny photos" />
+    <meta property="og:description" content="Focení svateb, portrétu a párových fotek" />
+    <meta property="og:image" content="%PUBLIC_URL%/fotky_web/preview/preview.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://asdsasm9.github.io/mp_page/#/home" />
+    <meta property="twitter:title" content="Mullny photos" />
+    <meta property="twitter:description" content="Focení svateb, portrétu a párových fotek" />
+    <meta property="twitter:image" content="%PUBLIC_URL%/fotky_web/preview/preview.jpg" />
+
     <meta charset="utf-8" />
     <link href="https://fonts.googleapis.com/css2?family=Martel:wght@400;700&display=swap" rel="stylesheet">
     
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/fotky_web/preview/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="theme-color" content="#ffffff" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/fotky_web/preview/logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -26,7 +40,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Mullny photos</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
